--- a/probando-api-request.ipynb
+++ b/probando-api-request.ipynb
@@ -135,24 +135,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"inserted_doc\": \"5de29748c15c42e4fe6ba305\"}'"
+       "'Name alreasy exists'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url='http://localhost:8080/add'\n",
-    "params={'autor':'chiquito',\n",
-    "       'chiste':'prueba6'}\n",
+    "url='http://localhost:8080/user/create'\n",
+    "params={'userName':'Blanca Lluch'}\n",
     "requests.post(url, data=params).text"
    ]
   },
