--- a/probando-api-request.ipynb
+++ b/probando-api-request.ipynb
@@ -75,24 +75,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Chat_id: 8'"
+       "'User 0 already in chat 1'"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url='http://localhost:8080/chat/create'\n",
-    "params={'user_id':[0,1,8]}\n",
+    "url='http://localhost:8080/chat/1/adduser'\n",
+    "params={'user_id':0}\n",
     "requests.post(url, data=params).text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2019-12-02 15:29:12.615593\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import datetime\n",
+    "print(datetime.datetime.utcnow())"
    ]
   },
   {
