--- a/probando-api-request.ipynb
+++ b/probando-api-request.ipynb
@@ -75,23 +75,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'User 0 already in chat 1'"
+       "''"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 97,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "url='http://localhost:8080/chat/1/adduser'\n",
-    "params={'user_id':0}\n",
+    "url='http://localhost:8080/chat/1/addmessage'\n",
+    "params={'user_id':0,\n",
+    "       \"chat_id\":1,\n",
+    "       \"text\":\"What an amaxing week!\"}\n",
     "requests.post(url, data=params).text"
    ]
   },
