--- a/probando-api-request.ipynb
+++ b/probando-api-request.ipynb
@@ -75,16 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "''"
+       "<Response [500]>"
       ]
      },
-     "execution_count": 97,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,21 +92,20 @@
    "source": [
     "url='http://localhost:8080/chat/1/addmessage'\n",
     "params={'user_id':0,\n",
-    "       \"chat_id\":1,\n",
     "       \"text\":\"What an amaxing week!\"}\n",
-    "requests.post(url, data=params).text"
+    "requests.post(url, data=params)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2019-12-02 15:29:12.615593\n"
+      "2019-12-02 16:23:47.953500\n"
      ]
     }
    ],
