--- a/api-request.ipynb
+++ b/api-request.ipynb
@@ -611,82 +611,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'sentiments': [{'idUser': 0,\n",
-       "   'idMessage': 0,\n",
-       "   'Message': 'Hey Mike, whats up??',\n",
+       "{'sentiments': [{'idUser': 2,\n",
+       "   'idMessage': 10,\n",
+       "   'Message': 'Im so angry right now!',\n",
+       "   'Sentiment': {'neg': 0.493, 'neu': 0.507, 'pos': 0.0, 'compound': -0.5974},\n",
+       "   '_id': {'$oid': '5de78336fe55b7727af35280'}},\n",
+       "  {'idUser': 3,\n",
+       "   'idMessage': 11,\n",
+       "   'Message': 'I saw you this morning. You shouldnt get so upset. ❤️',\n",
+       "   'Sentiment': {'neg': 0.272, 'neu': 0.728, 'pos': 0.0, 'compound': -0.5214},\n",
+       "   '_id': {'$oid': '5de78336fe55b7727af35281'}},\n",
+       "  {'idUser': 2,\n",
+       "   'idMessage': 12,\n",
+       "   'Message': 'Impossible! Cant do it! Just cant! He pissed me off so much.',\n",
+       "   'Sentiment': {'neg': 0.0, 'neu': 0.722, 'pos': 0.278, 'compound': 0.6421},\n",
+       "   '_id': {'$oid': '5de78336fe55b7727af35282'}},\n",
+       "  {'idUser': 3,\n",
+       "   'idMessage': 13,\n",
+       "   'Message': 'Dont get so frustrated, Leia. Remember what German said.',\n",
+       "   'Sentiment': {'neg': 0.353, 'neu': 0.647, 'pos': 0.0, 'compound': -0.656},\n",
+       "   '_id': {'$oid': '5de78336fe55b7727af35283'}},\n",
+       "  {'idUser': 2,\n",
+       "   'idMessage': 14,\n",
+       "   'Message': 'But how am I suposed to fix the facial recognition system if it doesnt even work?',\n",
        "   'Sentiment': {'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0},\n",
-       "   '_id': {'$oid': '5de77e5a8baef3cbbc6d95a8'}},\n",
-       "  {'idUser': 1,\n",
-       "   'idMessage': 1,\n",
-       "   'Message': 'Dude!!! 😀️ Did you watch the game last night?',\n",
+       "   '_id': {'$oid': '5de78336fe55b7727af35284'}},\n",
+       "  {'idUser': 3,\n",
+       "   'idMessage': 15,\n",
+       "   'Message': 'Im sure you will find a way.',\n",
+       "   'Sentiment': {'neg': 0.0, 'neu': 0.685, 'pos': 0.315, 'compound': 0.3182},\n",
+       "   '_id': {'$oid': '5de78336fe55b7727af35285'}},\n",
+       "  {'idUser': 2,\n",
+       "   'idMessage': 16,\n",
+       "   'Message': 'And who the hell is Tony? 🤯️',\n",
+       "   'Sentiment': {'neg': 0.434, 'neu': 0.566, 'pos': 0.0, 'compound': -0.6808},\n",
+       "   '_id': {'$oid': '5de78336fe55b7727af35286'}},\n",
+       "  {'idUser': 3,\n",
+       "   'idMessage': 17,\n",
+       "   'Message': 'I am Iron Man',\n",
        "   'Sentiment': {'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0},\n",
-       "   '_id': {'$oid': '5de77e5a8baef3cbbc6d95a9'}},\n",
-       "  {'idUser': 0,\n",
-       "   'idMessage': 2,\n",
-       "   'Message': 'No, had to work. How was it?',\n",
-       "   'Sentiment': {'neg': 0.268, 'neu': 0.732, 'pos': 0.0, 'compound': -0.296},\n",
-       "   '_id': {'$oid': '5de77e5a8baef3cbbc6d95aa'}},\n",
-       "  {'idUser': 1,\n",
-       "   'idMessage': 3,\n",
-       "   'Message': 'Awesome! Boyander scored 3 goals!',\n",
-       "   'Sentiment': {'neg': 0.0, 'neu': 0.39, 'pos': 0.61, 'compound': 0.6892},\n",
-       "   '_id': {'$oid': '5de77e5a8baef3cbbc6d95ab'}},\n",
-       "  {'idUser': 0,\n",
-       "   'idMessage': 4,\n",
-       "   'Message': 'No way! 😮️',\n",
-       "   'Sentiment': {'neg': 0.555, 'neu': 0.445, 'pos': 0.0, 'compound': -0.3595},\n",
-       "   '_id': {'$oid': '5de77e5a8baef3cbbc6d95ac'}},\n",
-       "  {'idUser': 1,\n",
-       "   'idMessage': 5,\n",
-       "   'Message': 'Way...',\n",
-       "   'Sentiment': {'neg': 0.0, 'neu': 1.0, 'pos': 0.0, 'compound': 0.0},\n",
-       "   '_id': {'$oid': '5de77e5a8baef3cbbc6d95ad'}},\n",
-       "  {'idUser': 0,\n",
-       "   'idMessage': 6,\n",
-       "   'Message': 'I bet people went crazy',\n",
-       "   'Sentiment': {'neg': 0.444, 'neu': 0.556, 'pos': 0.0, 'compound': -0.34},\n",
-       "   '_id': {'$oid': '5de77e5a8baef3cbbc6d95ae'}},\n",
-       "  {'idUser': 1,\n",
-       "   'idMessage': 7,\n",
-       "   'Message': 'For sure. We stayed at KuboLoco until 6AM.',\n",
-       "   'Sentiment': {'neg': 0.0, 'neu': 0.753, 'pos': 0.247, 'compound': 0.3182},\n",
-       "   '_id': {'$oid': '5de77e5a8baef3cbbc6d95af'}},\n",
-       "  {'idUser': 0,\n",
-       "   'idMessage': 8,\n",
-       "   'Message': 'Motherfucker! Hungover? 😵️',\n",
-       "   'Sentiment': {'neg': 0.71, 'neu': 0.29, 'pos': 0.0, 'compound': -0.7088},\n",
-       "   '_id': {'$oid': '5de77e5a8baef3cbbc6d95b0'}},\n",
-       "  {'idUser': 1,\n",
-       "   'idMessage': 9,\n",
-       "   'Message': 'Dead, burried and still suffering! 🤮️',\n",
-       "   'Sentiment': {'neg': 0.658, 'neu': 0.342, 'pos': 0.0, 'compound': -0.8268},\n",
-       "   '_id': {'$oid': '5de77e5a8baef3cbbc6d95b1'}}],\n",
-       " 'compound sentiments': [0.0,\n",
+       "   '_id': {'$oid': '5de78336fe55b7727af35287'}},\n",
+       "  {'idUser': 2,\n",
+       "   'idMessage': 18,\n",
+       "   'Message': 'Oh shit. I think youre friends with my brother.',\n",
+       "   'Sentiment': {'neg': 0.283, 'neu': 0.472, 'pos': 0.244, 'compound': -0.128},\n",
+       "   '_id': {'$oid': '5de78336fe55b7727af35288'}},\n",
+       "  {'idUser': 3,\n",
+       "   'idMessage': 19,\n",
+       "   'Message': 'Uh-Oh. Better fix that quickly.',\n",
+       "   'Sentiment': {'neg': 0.0, 'neu': 0.58, 'pos': 0.42, 'compound': 0.4404},\n",
+       "   '_id': {'$oid': '5de78336fe55b7727af35289'}},\n",
+       "  {'idUser': 3,\n",
+       "   'idMessage': 50,\n",
+       "   'Message': 'What an amazing week!',\n",
+       "   'Sentiment': {'neg': 0.0, 'neu': 0.423, 'pos': 0.577, 'compound': 0.6239},\n",
+       "   '_id': {'$oid': '5de78336fe55b7727af3528a'}}],\n",
+       " 'compound sentiments': [-0.5974,\n",
+       "  -0.5214,\n",
+       "  0.6421,\n",
+       "  -0.656,\n",
        "  0.0,\n",
-       "  -0.296,\n",
-       "  0.6892,\n",
-       "  -0.3595,\n",
-       "  0.0,\n",
-       "  -0.34,\n",
        "  0.3182,\n",
-       "  -0.7088,\n",
-       "  -0.8268],\n",
-       " 'avg sentiment [-1,1]': -0.15236999999999998}"
+       "  -0.6808,\n",
+       "  0.0,\n",
+       "  -0.128,\n",
+       "  0.4404,\n",
+       "  0.6239],\n",
+       " 'avg sentiment [-1,1]': -0.050818181818181825}"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sent=requests.get('http://localhost:8080/chat/0/sentiment').json()\n",
+    "sent=requests.get('http://localhost:8080/chat/1/sentiment').json()\n",
     "sent"
    ]
   },
@@ -790,7 +796,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"2's' sentiments aren't analyzed.\""
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recomendation=requests.get('http://localhost:8080/user/2/recommend').text\n",
+    "recomendation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -799,14 +826,14 @@
        "'[[\"0\", 0.042796049251091296], [\"1\", 0.0]]'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "recomendation=requests.get('http://localhost:8080/user/1/recommend').text\n",
-    "recomendation"
+    "recomendation2=requests.get('http://localhost:8080/user/1/recommend').text\n",
+    "recomendation2"
    ]
   },
   {
